js/js.translator/testData/incremental/invalidation/privateObjectsLeakThroughSealedInterface/lib1/interface.2.kt
sealed interface SealedInterface {
    val extraNumber get() = 1

    fun getNumber() = 0

    fun getOtherNumber() = 1
}
